--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PlanMate</string>
+    <string name="app_name">TripMania</string>
     <string name="take_photo">Take Photo</string>
     <string name="default_web_client_id">247061115042-2pb1t74ig15qjr4i608gc043t86dv6p0.apps.googleusercontent.com</string>
 </resources>
